# higgs-audio

./: .gitignore  README.md  SUPPORT_GUIDELINES.md  audio_pipeline.py  generate_chat_audio.py  main.py  merge_audios.py  multiple_chat_audios.py  pyproject.toml  requirements.txt  setup.cfg  voiceover_module.py
.github/workflows/: test.yml
audio/: generation.py  multiple_chat_audios.py  single_chat_audio.py
boson_multimodal/: __init__.py  constants.py  data_types.py
boson_multimodal/audio_processing/: LICENSE  higgs_audio_tokenizer.py  semantic_module.py
boson_multimodal/audio_processing/descriptaudiocodec/dac/model/: base.py  dac.py
boson_multimodal/audio_processing/descriptaudiocodec/dac/nn/: quantize.py
boson_multimodal/audio_processing/quantization/: ac.py  core_vq.py  core_vq_lsx_version.py  ddp_utils.py  vq.py
boson_multimodal/data_collator/: higgs_audio_collator.py
boson_multimodal/dataset/: chatml_dataset.py
boson_multimodal/model/higgs_audio/: __init__.py  audio_head.py  common.py  configuration_higgs_audio.py  cuda_graph_runner.py  custom_modules.py  modeling_higgs_audio.py  utils.py
boson_multimodal/serve/: serve_engine.py  utils.py
chats/: chat_history.json  chat_history.txt
discord_bot/: voiceover_module.py
discord_bot/LLM_generate/: funny_script.txt  wrapper.py
discord_bot/logging_data/: bot_logging.py  bot_message.txt
discord_bot/logs/: messages_2025-10-25.json  messages_2025-10-26.json
examples/: README.md  generation.py
examples/scene_prompts/: quiet_indoor.txt  reading_blog.txt
examples/serve_engine/: README.md  input_samples.py  run_hf_example.py
examples/transcript/multi_speaker/: en_argument.txt  en_higgs.txt
examples/transcript/single_speaker/: en_basic.txt  en_dl.txt  en_higgs_audio_blog.md  zh_ai.txt
examples/transcript/single_speaker/experimental/: en_bgm.txt  en_bgm2.txt  en_humming.txt  en_singing.txt
examples/vllm/: README.md  run_chat_completion.py
examples/voice_prompts/: belinda.txt  bigbang_amy.txt  bigbang_sheldon.txt  broom_salesman.txt  chadwick.txt  en_man.txt  en_woman.txt  fiftyshades_anna.txt  mabaoguo.txt  mabel.txt  profile.yaml  shrek_donkey.txt  shrek_donkey_es.txt  shrek_fiona.txt  shrek_shrek.txt  vex.txt
tech_blogs/: ARCHITECTURE_BLOG.md  TOKENIZER_BLOG.md
