[metadata]
name = higgs_audio_v2
author = Boson AI
version = 0.1.0
url = https://github.com/boson-ai/higgs_audio_v2
description = Higgs Audio V2
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    training*
