[metadata]
name = boson_multimodal
author = Boson AI
version = 0.1.0
url = https://github.com/boson-ai/higgs-audio
description = Higgs Audio
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    training*
